--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,8 +11,10 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "http-errors": "^2.0.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
